# hermes-zulip-bridge

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
deploy/env/: hermes-zulip-bridge.env.example
deploy/linux/: hermes-zulip-bridge.service.template  install-systemd-user-service.sh
deploy/macos/: com.hermes.zulip-bridge.plist.template  install-launch-agent.sh
examples/: minimal.yaml  service.yaml
src/hermes_zulip_bridge/: __init__.py  bridge.py  cli.py  config.py  kanban_task.py  locking.py  notifier.py  security.py  smoke.py
tests/: test_bridge.py  test_cli.py  test_config.py  test_locking.py  test_notifier.py  test_notifier_hardening.py  test_preflight_privacy.py  test_smoke.py
